--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,11 @@ body {
 }
 
 .container {
+  display: flex;
   align-items: center;
-  width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
   margin: 0 auto;
 }
 
@@ -257,7 +258,7 @@ a {
 
 /* ===== Strategy Section ===== */
 .strategy-box {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   height: 112px;
@@ -268,15 +269,19 @@ a {
 }
 
 .strategy-section {
-  padding-bottom: 120px;
-  padding-top: 120px;
+  /* padding-bottom: 120px;
+  padding-top: 120px; */
+  padding-bottom: 96px;
+  padding-top: 96px;
 }
 
 .strategy-card {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
   letter-spacing: 0.02em;
+  text-align: center;
   color: #2e2f42;
   margin-bottom: 8px;
 }
@@ -284,7 +289,8 @@ a {
 .strategy-list {
   display: flex;
   justify-content: space-between;
-  gap: 24px;
+  /* gap: 24px; */
+  gap: 72px;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -292,13 +298,17 @@ a {
 }
 
 .strategy-item {
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
+  width: 100%;
 }
 
 .strategy-text {
-  line-height: 1.5;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
   letter-spacing: 0.02em;
-  max-width: 264px;
+  color: #434455;
 }
 
 /* ===== Team Section ===== */
@@ -341,6 +351,7 @@ a {
 }
 
 .team-title {
+  display: block;
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
@@ -646,11 +657,8 @@ a {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop {
+.backdrop .is-open {
   display: block;
-}
-
-.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
@@ -837,4 +845,118 @@ a {
   background-color: #4d5ae5;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* МЕDIA QUERIES */
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 100%;
+    width: 768px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .strategy-list {
+    gap: 24px;
+  }
+
+  .strategy-item {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+  }
+
+  .team-item {
+    width: calc((100% - 72px) / 4);
+  }
+
+  .team-title {
+    text-align: center;
+  }
+
+  .strategy-list {
+    gap: 24px;
+  }
+
+  .strategy-item {
+    width: calc((100% - 72px) / 4);
+  }
+}
+
+@media (min-width: 768px) {
+  .strategy-card {
+    text-align: left;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 111%;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+  }
+
+  .strategy-box {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+  }
+
+  .strategy-text {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    max-width: 264px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #434455;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .strategy-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+  }
+  .strategy-card {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+  }
+
+  .strategy-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #434455;
+  }
+
+  .strategy-section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
