--- a/css/styles.css
+++ b/css/styles.css
@@ -414,25 +414,29 @@ a {
 }
 
 /* ===== Portfolio Section ===== */
+.container.portfolio-container {
+  display: block;
+}
+
 .portfolio-section {
-  padding: 120px 0;
+  /* padding: 120px 0; */
+  padding: 96px 0;
 }
 
 .portfolio-list {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
   gap: 24px;
   list-style: none;
   padding: 0;
   margin: 0;
   flex-wrap: wrap;
-  row-gap: 48px;
-  column-gap: 24px;
+  column-gap: 48px;
 }
 
 .first-portfolio-item {
-  width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
 }
 
 .first-portfolio-item:hover {
@@ -649,7 +653,6 @@ a {
 
 .backdrop {
   position: fixed;
-
   top: 0;
   left: 0;
   width: 100vw;
@@ -661,8 +664,11 @@ a {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop .is-open {
+.backdrop.inactive {
   display: block;
+}
+
+.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
@@ -911,6 +917,21 @@ a {
     column-gap: 24px;
     row-gap: 64px;
   }
+  .portfolio-list {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    list-style: none;
+    padding: 0;
+    gap: 24px;
+    margin: 0;
+    flex-wrap: wrap;
+  }
+
+  .first-portfolio-item {
+    width: calc((100% - 24px) / 2);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 /* 1158 */
@@ -923,17 +944,13 @@ a {
     margin: 0 auto;
   }
 
-  .team-item {
+  /* .team-item {
     width: calc((100% - 72px) / 4);
-  }
+  } */
 
-  .team-title {
-    text-align: center;
-  }
-
-  .strategy-list {
+  /* .strategy-list {
     gap: 24px;
-  }
+  } */
 
   .strategy-item {
     width: calc((100% - 72px) / 4);
@@ -980,5 +997,23 @@ a {
     margin: 0;
     flex-wrap: wrap;
     gap: 24px;
+  }
+
+  .portfolio-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 24px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
+  }
+
+  .first-portfolio-item {
+    width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
